Squashing asset pipeline bugs and other stuff
1. Update dependencies
   - Add font-awesome as dependency
   - Switch to Bootstrap 4 dev branch
   - Remove eslint airbnb style (we're not using it)

2. Imported images and fonts should go into dist/images
   and dist/fonts, respectively

3. Only lint our own code, not external code (fixes #1633)

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -5,3 +5,6 @@ $sidebar-sm-columns:    4;
 
 // Colors
 $brand-primary:         #27ae60;
+
+// Font Awesome | see: http://fontawesome.io/get-started/
+$fa-font-path:          '~font-awesome/fonts';
